# ElGammalRust

./: README.md
el_gammal_rust/: Cargo.toml
el_gammal_rust/src/: main.rs
