[package]
name = "el_gammal_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic-curve = "0.13.8"
num-bigint = "0.4.4"
num-traits = "0.2.17"   
num-primes = "0.3.0"
rand = "0.8.5"
modinverse = "0.1.1"
sha2 = "0.10.8"
num-bigint-dig = "0.8.4"
crypto = "0.5.1"
crypto-hash = "0.3.4"